# shivarthu_client

./: .gitignore  Cargo.toml  License  README  README.md  esbuild.js  index.html  package-lock.json  package.js  package.json
.cargo/: config.toml
artifacts/: metadata.scale
docs/: test_accounts_seed.md
js_api/: api.js
js_api/4everland/: upload_file.js  upload_pin.js  upload_pin_file.js
js_api/4everland_s3/: sts_credentials.js
js_api/ai/: chat_hugging_face.js
js_api/balance/: balance_tranfer.js
js_api/ipfs/: cid_helia.js
js_api/polkadot_extension/: extension.js
js_api/profile_validation/: add_profile.js  add_profile_stake.js  challenge_profile.js
src/: js_extension_binding.rs  lib.rs  main.rs  package.js  polkadot_extension_binding.rs  router.rs
src/components/: mod.rs
src/components/accounts/: account_address_view.rs  account_home.css  account_home.rs  account_store.rs  add_accounts.rs  clear_local_storage.rs  create_account.rs  functions.rs  mod.rs  set_phrase_from_pass.rs  sign_tx_async.rs  sign_tx_event_hook.rs  sign_tx_hook.rs  signout_view.rs
src/components/ai/: chat_huggingface.rs  mod.rs
src/components/api/: blob_to_bytes.rs  body_read_from_file.rs  ipfs_fetch_response.rs  ipfs_request.rs  mod.rs  select_ipfs_provider.rs  upload_file_everland.rs
src/components/balance/: balance.rs  mod.rs  transfer_balance.rs  transfer_balance_transaction_condition.rs
src/components/common_component/: common_transaction_extension_return.rs  common_transaction_return.rs  common_transaction_return_clean.rs  common_transaction_return_hook.rs  custom_extrinsics_extension_hook.rs  get_accounts_extension.rs  mod.rs  pagination.rs  pagination_hook.rs  sign_in_extension_commons.rs  tipping_implementation.rs  tipping_implementation_project_tips.rs
src/components/department_funding/: apply_jurors.rs  apply_jurors_transaction_conditions.rs  apply_staking_period.rs  change_period.rs  change_period_transaction_condition.rs  commit_vote.rs  commit_vote_transaction_condition.rs  create_department_funding_transaction.rs  create_department_required_fund.rs  create_staking_period_transaction.rs  draw_jurors.rs  draw_jurors_transaction_condition.rs  get_incentives.rs  get_incentives_transaction_condition.rs  mod.rs  reveal_vote.rs  reveal_vote_transaction_condition.rs  unstaking.rs  unstaking_transaction_condition.rs
src/components/input/: custom_button.rs  mod.rs  text_input.rs
src/components/ipfs/: form_ipfs_upload.rs  mod.rs  upload_video.css  upload_video.rs
src/components/jstests/: children_test.rs  first_test.rs  mod.rs  test2.rs  upload_pin_string_everland.rs
src/components/markdown/: markdown_component.rs  markdown_field.rs  markdown_to_html.rs  mod.rs
src/components/navigation/: login_view.rs  mod.rs  nav.rs
src/components/pages/: conditional_transaction_modal.rs  fileupload.rs  hash_map_state.rs  home.rs  mod.rs  rpc_call.rs  storage.rs  transaction.rs  transaction_from_hook.rs
src/components/positive_externality_validation/: apply_jurors_positive_externality.rs  apply_jurors_positive_externality_transaction_condition.rs  change_period_positive_externality.rs  change_period_positive_externality_transaction_condition.rs  commit_vote_positive_externality.rs  commit_vote_positive_externality_transaction_condition.rs  create_positive_externality_post.rs  create_positive_externality_post_transaction_condition.rs  draw_jurors_positive_externality.rs  draw_jurors_positive_externality_transaction_condition.rs  get_incentives_positive_externality.rs  get_incentives_positive_externality_transaction_condition.rs  mod.rs  reveal_vote_positive_externality.rs  reveal_vote_positive_externality_transaction_condition.rs  unstaking_positive_externality.rs  unstaking_positive_externality_transaction_condition.rs
src/components/profile_validation/: mod.rs
src/components/project_tips/: apply_jurors.rs  apply_jurors_transaction_conditions.rs  apply_staking_period.rs  change_period.rs  change_period_transaction_condition.rs  commit_vote.rs  commit_vote_transaction_condition.rs  create_project_tips_fund.rs  create_project_tips_transaction.rs  create_staking_period_transaction.rs  draw_jurors.rs  draw_jurors_transaction_condition.rs  get_incentives.rs  get_incentives_transaction_condition.rs  mod.rs  reveal_vote.rs  reveal_vote_transaction_condition.rs  (+2 more)
src/constants/: auth.rs.bak  constant.rs  local_storage.rs  mod.rs
src/routers/: mod.rs  validation_router.rs
src/services/: common_services.rs  mod.rs
(+66 files in other folders)
