[package]
name = "shivarthu-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8.0"
serde = "1.0.144"
serde_json = "1.0.85"
stylist = { version = "0.11.0", features=["yew"]}
wasm-bindgen = "0.2.82"
web-sys = {version = "0.3.59", features=["HtmlInputElement", "DragEvent", "File", "DataTransfer"]}
yew-router = "0.17.0"
sp-keyring = "7.0.0"
futures = "0.3.13"
hex = "0.4.3"
tracing-subscriber = "0.3.11"
wasm-bindgen-futures = "0.4.32"
jsonrpsee-wasm-client = "0.16.1"
jsonrpsee-core = "0.16.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
# getrandom = { version = "0.2.7", features = ["js"] }
subxt = { version="0.25.0", default-features = false, features = ["jsonrpsee-web"] }

