[package]
name = "shivarthu-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8.0"
gloo-net = { version = "0.2.5", feature = ["http"]}
gloo-timers = "0.2.4"
serde = "1.0.144"
serde_json = "1.0.85"
stylist = { version = "0.11.0", features = ["yew", "parser"] }
yewdux = "0.9"
wasm-bindgen = "0.2.82"
web-sys = {version = "0.3.59", features=["HtmlInputElement", "DragEvent", "File", "DataTransfer"]}
js-sys = "0.3"
yew-router = "0.17.0"
sp-keyring = { version = "7.0.0", default-features = false }
futures = "0.3.13"
hex = "0.4.3"
tracing-subscriber = "0.3.11"
wasm-bindgen-futures = "0.4.32"
jsonrpsee-wasm-client = "0.16.1"
jsonrpsee-core = "0.16.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
# getrandom = { version = "0.2.7", features = ["js"] }
subxt = { version="0.25.0", default-features = false, features = ["jsonrpsee-web"] }
magic-crypt = "3.1.12"
yew_icons = { version = "0.7", features = ["BootstrapCloudUpload"]}
sp-core = { version = "7.0.0", default-features = false }
tiny-bip39 = "1.0.0"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true


