[package]
name = "shivarthu-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yew = { version = "0.20.0", features = ["csr"] }
rand = "0.8.5"
gloo = "0.10.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
serde = "1.0.180"
serde_json = "1.0.104"
stylist = { version = "0.12.1", features = ["yew", "parser"] }
yewdux = "0.9"
wasm-bindgen = "0.2.87"
web-sys = {version = "0.3.64", features=["HtmlInputElement", "DragEvent", "File", "DataTransfer"]}
js-sys = "0.3.64"
yew-router = "0.17.0"
# sp-keyring = { version = "21.0.0", default-features = false }
futures = "0.3.28"
hex = "0.4.3"
tracing-subscriber = "0.3.17"
wasm-bindgen-futures = "0.4.37"
jsonrpsee-wasm-client = "0.20.0"
jsonrpsee-core = "0.20.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
# getrandom = { version = "0.2.7", features = ["js"] }
subxt = { version="0.31.0", default-features = false, features = ["jsonrpsee", "web"]}
subxt-signer = { version="0.31.0", default-features = false, features = ["web", "sr25519", "ecdsa", "subxt"] }
# sp-core = { version = "20.0.0", features = ["full_crypto"] }
magic-crypt = "3.1.12"
yew_icons = { version = "0.7.2", features = ["BootstrapCloudUpload", "FontAwesomeSolidSpinner"]}
tiny-bip39 = "1.0.0"
pulldown-cmark = "0.9.2"
json = "0.12.4"
regex= "1.8.3"
sp-core-hashing= "10.0.0"
yew-hooks="0.2.0"




[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true